Разбила global.less
Разбила global.less на файлы: global.less, form.less, form-input.less, form-label.less

--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,9 @@
 @import "blocks/catalog-list.less";
 @import "blocks/product-list.less";
 @import "blocks/promo.less";
+@import "blocks/form.less";
+@import "blocks/form-label.less";
+@import "blocks/form-input.less";
 @import "blocks/form-order.less";
 @import "blocks/form-type.less";
 @import "blocks/form-color.less";
@@ -20,6 +23,3 @@
 @import "blocks/form-contact.less";
 @import "blocks/form-comment.less";
 @import "blocks/main-title.less";
-/*@import "blocks/form.less";
-@import "blocks/form-label.less";
-@import "blocks/form-input.less";*/
