--- a/less/blocks/form-label.less
+++ b/less/blocks/form-label.less
@@ -1,5 +1,5 @@
 @import "../variables.less";
-/*
+
 .form-label {
   font-size: 17px;
   line-height: 18px;
@@ -17,4 +17,4 @@
   &:active::before {
     border-color: @border-color__active;
   }
-}*/
+}
